[package]
authors = ["Google Inc."]
edition = "2018"
license = "Apache-2.0"
name = "rust_icu_unumberformatter"
readme = "README.md"
repository = "https://github.com/google/rust_icu"
version = "0.4.0"
default-features = false
keywords = ["icu", "unicode", "i18n", "l10n"]

description = """
Native bindings to the ICU4C library from Unicode.

- unumberformatter.h: Number formatting support (modern)
"""

[dependencies]
anyhow = "1.0.25"
log = "0.4.6"
paste = "1.0"
rust_icu_common = { path = "../rust_icu_common", version = "0.4.0", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "0.4.0", default-features = false }
rust_icu_uformattable = { path = "../rust_icu_uformattable", version = "0.4.0", default-features = false }
rust_icu_uloc = { path = "../rust_icu_uloc", version = "0.4.0", default-features = false }
rust_icu_unum = { path = "../rust_icu_unum", version = "0.4.0", default-features = false }
rust_icu_ustring = { path = "../rust_icu_ustring", version = "0.4.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.25"

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["use-bindgen", "renaming", "icu_config"]

use-bindgen = [
  "rust_icu_common/use-bindgen",
  "rust_icu_sys/use-bindgen",
  "rust_icu_uformattable/use-bindgen",
  "rust_icu_uloc/use-bindgen",
  "rust_icu_unum/use-bindgen",
  "rust_icu_ustring/use-bindgen",
]
renaming = [
  "rust_icu_common/renaming",
  "rust_icu_sys/renaming",
  "rust_icu_uformattable/renaming",
  "rust_icu_uloc/renaming",
  "rust_icu_ustring/renaming",
  "rust_icu_unum/renaming",
]
icu_config = [
  "rust_icu_common/icu_config",
  "rust_icu_sys/icu_config",
  "rust_icu_uformattable/icu_config",
  "rust_icu_uloc/icu_config",
  "rust_icu_unum/icu_config",
  "rust_icu_ustring/icu_config",
]
icu_version_in_env = [
  "rust_icu_common/icu_version_in_env",
  "rust_icu_sys/icu_version_in_env",
  "rust_icu_uformattable/icu_version_in_env",
  "rust_icu_uloc/icu_version_in_env",
  "rust_icu_unum/icu_version_in_env",
  "rust_icu_ustring/icu_version_in_env",
]
icu_version_64_plus = [
  "rust_icu_common/icu_version_64_plus",
  "rust_icu_sys/icu_version_64_plus",
  "rust_icu_uformattable/icu_version_64_plus",
  "rust_icu_uloc/icu_version_64_plus",
  "rust_icu_unum/icu_version_64_plus",
  "rust_icu_ustring/icu_version_64_plus",
]
icu_version_67_plus = [
  "rust_icu_common/icu_version_67_plus",
  "rust_icu_sys/icu_version_67_plus",
  "rust_icu_uformattable/icu_version_67_plus",
  "rust_icu_uloc/icu_version_67_plus",
  "rust_icu_unum/icu_version_67_plus",
  "rust_icu_ustring/icu_version_67_plus",
]
icu_version_68_plus = [
  "rust_icu_common/icu_version_68_plus",
  "rust_icu_sys/icu_version_68_plus",
  "rust_icu_uformattable/icu_version_68_plus",
  "rust_icu_uloc/icu_version_68_plus",
  "rust_icu_unum/icu_version_68_plus",
  "rust_icu_ustring/icu_version_68_plus",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "google/rust_icu" }
is-it-maintained-open-issues = { repository = "google/rust_icu" }
travis-ci = { repository = "google/rust_icu", branch = "master" }
