[package]
edition = "2018"
name = "rust_icu_utext"
version = "0.0.3"
authors = ["Google Inc."]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/google/rust_icu"

description = """
Native bindings to the ICU4C library from Unicode.

utext.h
"""

keywords = ["icu", "unicode", "i18n", "l10n"]

[dependencies]
paste = "0.1.5"
rust_icu_common = { path = "../rust_icu_common", version = "0.0.3", default-features = false }
rust_icu_sys = { path = "../rust_icu_sys", version = "0.0.3", default-features = false }

# See the feature description in ../rust_icu_sys/Cargo.toml for details.
[features]
default = ["bindgen", "renaming", "icu_config"]

bindgen = ["rust_icu_sys/bindgen", "rust_icu_common/bindgen"]
renaming = ["rust_icu_sys/renaming", "rust_icu_common/renaming"]
icu_config = ["rust_icu_sys/icu_config", "rust_icu_common/icu_config"]

